Testing: reverted to 100% height for fixed-wrap

--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ hr.light-100{
 figure {
   position: relative;
   width: 100%;
-  /* height: 55%; */
+  height: 55%;
   /* height: 25%; */
   margin: 0!important;
 }
@@ -416,8 +416,8 @@ figure {
   top: 0;
   left: 0;
   width: 100%;
-  /* height: 100%; */
-  height: 50%;
+  height: 100%;
+  /* height: 50%; */
 }
 #fixed {
   background-image: url('img/cropped-Blockchain-chains-1.png');
